@@ -304,6 +304,20 @@ name|apache
 operator|.
 name|hadoop
 operator|.
+name|fs
+operator|.
+name|CommonConfigurationKeys
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
 name|mapreduce
 operator|.
 name|MRJobConfig
@@ -812,6 +826,20 @@ name|apache
 operator|.
 name|hadoop
 operator|.
+name|security
+operator|.
+name|SecurityUtil
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
 name|yarn
 operator|.
 name|Clock
@@ -1306,6 +1334,16 @@ name|org
 operator|.
 name|junit
 operator|.
+name|Before
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|junit
+operator|.
 name|Test
 import|;
 end_import
@@ -1350,6 +1388,23 @@ literal|null
 argument_list|)
 decl_stmt|;
 annotation|@
+name|Before
+DECL|method|setup ()
+specifier|public
+name|void
+name|setup
+parameter_list|()
+block|{
+comment|// This is done to make sure token service doesn't use ip.
+name|SecurityUtil
+operator|.
+name|setTokenServiceUseIp
+argument_list|(
+literal|false
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
 name|After
 DECL|method|tearDown ()
 specifier|public
@@ -1361,6 +1416,15 @@ name|DefaultMetricsSystem
 operator|.
 name|shutdown
 argument_list|()
+expr_stmt|;
+name|SecurityUtil
+operator|.
+name|setTokenServiceUseIp
+argument_list|(
+name|CommonConfigurationKeys
+operator|.
+name|HADOOP_SECURITY_TOKEN_SERVICE_USE_IP_DEFAULT
+argument_list|)
 expr_stmt|;
 block|}
 annotation|@
